fixed alignment

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -242,6 +242,9 @@
 .notice-content
 {
     width: 90%;
+
+    margin-left: auto;
+    margin-right: auto;
 }
 .notice, .notice-content
 {
